apps/base/vaultwarden/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/name: vaultwarden
  name: vaultwarden
  namespace: vaultwarden
spec:
  hostnames:
    - vaultwarden.example.com
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: vaultwarden
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: security-headers
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
